--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">PhotoHub</string>
     <string name="full_screen_image">FullScreenImage</string>
     <string name="gallery">Gallery</string>
 </resources>
